produksi operator belum bisa

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
  
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Smart Algae Pond</title>
   </head>
   <body class="hold-transition sidebar-mini layout-fixed">
     <noscript>
